attempt fix for excal logo on safari

--- a/src/components/WelcomeScreen.scss
+++ b/src/components/WelcomeScreen.scss
@@ -11,6 +11,7 @@
 
     svg {
       width: 1.625rem;
+      height: auto;
     }
   }
 
